--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Username
+name: Fatema Boxwala
 
 # Short bio or description (displayed in the header)
-description: Programmer From Somewhere On Earth
+description: Hi! I write code for money and make art for fun.
 
 
 #
@@ -16,12 +16,12 @@ description: Programmer From Somewhere On Earth
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: agarwal.akshay.akshay8@gmail.com
+  email: fatemabox@gmail.com
   facebook:
   flickr:
-  github: AkshayAgarwal007
+  github: fboxwala
   instagram:
-  linkedin: akshay-agarwal-782018a4
+  linkedin: fatemaboxwala
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
