adds social media

--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,11 @@ footer-links:
   facebook:
   flickr:
   github: fboxwala
-  instagram:
+  instagram: fboxy
   linkedin: fatemaboxwala
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: 
+  twitter: fatty_box
   stackoverflow: # your stackoverflow profile, e.g. "users/3807565/akshay"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
